<resources>
    <string name="app_name">Super Nahtral Sports</string>
    <string name="signup">Sign up</string>
    <string name="login">Log in</string>
    <string name="name">Alex</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="forget_password">Forget Password ?</string>
    <string name="password_not_match">Password Doesnt match</string>
    <string name="empty_otp">Please Enter OTP</string>
    <string name="news">News</string>
    <string name="heart_text">609</string>
    <string name="chat_text">120</string>
    <string name="team1">Team 1</string>
    <string name="password_empty">Empty Password </string>
    <string name="confirm_pass">Empty Confirm password</string>
    <string name="empty_email_name">Empty Email ID</string>
    <string name="check_network">Check Your Network Connection</string>
    <string name="send_email">Forgot Password</string>
    <string name="text_title">On the trip to America,looking for someone to join me on this epic journey</string>
    <string name="text_sub_title">Hey lets schedule a call for next week </string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_forgot_email">Enter your register email</string>
    <string name="submit">Submit</string>
    <string name="otp">OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="proper_email">Enter Proper Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_out_msg">Are you sure you wish to sign out?</string>
    <string name="change_password">Change Password</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="events">Events</string>
    <string name="moments">Moments</string>
    <string name="sponsors">Sponsors</string>
    <string name="me">Me</string>
    <string name="games">Games</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="edit_profile">Edit Profile </string>
    <string name="search">Search </string>
    <string name="search_for">What are you searching for ? </string>
    <string name="basketball">BASKETBALL </string>
    <string name="search_caps">SEARCH</string>
    <string name="write_message">Write a message</string>
    <string name="report">Report</string>
    <string name="send">Send</string>
    <string name="write_message_hint">+&#160;&#160;&#160;Write a message </string>
    <string name="live_score">Live Score</string>
    <string name="info">Info</string>
    <string name="phone">Phone</string>
    <string name="birth">Birth</string>
    <string name="description">Description</string>
    <string name="title">Title</string>

    <string name="time">Time</string>

    <string name="venue1">Venue</string>
    <string name="address1">Address</string>
     <string name="contact_person">Contact Person</string>

    <string name="old_password">Old Password</string>
    <string name="loading">Loading...</string>
    <string name="team">Team</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="final_r">final</string>

    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="post">Post</string>
    <string name="resume">Resume</string>
    <string name="event_details">Event Details</string>
    <string name="event_venue">Event Venue</string>
    <string name="summary">Summary</string>


    <string name="schedule">Schedule</string>
    <string name="attendance">Attendance</string>
    <string name="skill">Skill</string>
    <string name="skill_set">Skill Set</string>
    <string name="player_info">Player Info</string>
    <string name="statistics">Statistics</string>
    <string name="sponsor">Sponsor</string>
    <string name="notes">Notes</string>
    <string name="primary_contact">Primary Contact</string>
    <string name="secondary_contact">Secondary Contact</string>
    <string name="completed">Completed</string>
    <string name="saturday">SATURDAY TEAM PRACTICE</string>
    <string name="starting_day">Start Day :</string>
    <string name="end_day">End Day :</string>
    <string name="venue">Venue :</string>
    <string name="from">From</string>
    <string name="start_date">Start Date</string>
    <string name="to">To</string>
    <string name="find_schedule">Find Your Schedule</string>
    <string name="end_date">End Date</string>
    <string name="present">Present</string>
    <string name="late">Late</string>
    <string name="absent">Absent</string>
    <string name="excuse">Excuse</string>
    <string name="student_list">Student List</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_ph_no">Contact Phone No.</string>
    <string name="enter_register_mail">Enter your register email</string>
    <string name="alert">Alert</string>

    <string-array name="game_drawer_items">
        <item>@string/games</item>
        <item>@string/events</item>
        <item>@string/schedule</item>
        <item>@string/attendance</item>
        <item>@string/skill</item>
        <item>@string/player_info</item>
        <item>@string/statistics</item>
        <item>@string/sponsor</item>
        <item>@string/notes</item>
    </string-array>


    <string name="trainer">Trainer</string>
    <string name="player">Player</string>
    <string name="parent">Parent</string>
    <string name="create_group">Create Group >>></string>
    <string name="typemessage">Write a message</string>
    <string name="typemessage_oncomment">Write a message on comment</string>
    <string name="new_group">New Group</string>
    <string name="add_member">Add Members</string>
    <string name="messsage">Message</string>
    <string name="create_group_2">Create Group</string>
    <string name="type_group_name">Type group name here&#8230;</string>
    <string name="msg_group_create">Provide a group subject and optional group icon</string>
    <string name="msg_blank_group">Please enter group name</string>
    <string name="details">Detail</string>
    <string name="update">Update</string>
    <string name="add_participant">Add participant</string>
    <string name="delete_group">Delete Group</string>
    <string name="remove">Remove</string>
    <string name="add_member_in_group">Add Member In Group</string>
    <string name="show_more">Show more</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="enter_comment">Enter comment</string>
    <string name="comments">Comments</string>
    <string name="report_msg">If you find any objectionable content in this Moment, please submit a request to Admin for remove the Moment &amp; block the user. After checking if we will found any glitches from your side, your account will be blocked.</string>
    <string name="select_users">Select users</string>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
