<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        card_view:cardUseCompatPadding="true"
        app:cardElevation="10dp"
        android:layout_margin="4dp"
        app:cardPreventCornerOverlap="false"
        android:dividerHeight="0dp"
        android:layout_centerInParent="true"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:text="@string/alert"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_msg"
                android:gravity="left"
                android:padding="5dp"
                android:textSize="14sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/dark_gray"
                />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/gray_fill"
                android:padding="6dp"
                >

                <TextView
                    android:id="@+id/tv_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:padding="7dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/view1"
                    android:text="@string/yes"
                    />

                <View
                    android:id="@+id/view1"
                    android:layout_width="1dp"
                    android:layout_height="45dp"
                    android:background="@color/dark_gray"
                    android:layout_centerHorizontal="true"
                    />


                <TextView
                    android:id="@+id/tv_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/deep_yellow"
                    android:textSize="20sp"
                    android:padding="7dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/view1"
                    android:text="@string/no"
                    />


            </RelativeLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>



</RelativeLayout>
