<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:background="@color/white"
        >

    </android.support.v7.widget.Toolbar>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon0"
        android:background="@android:color/white"
        android:paddingTop="20dp"/>


    <LinearLayout
        android:id="@+id/linear_entry_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="gone"
        >

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/dark_gray"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_forgot_email"
            />

        <RelativeLayout
            android:id="@+id/rl_submit"
            android:layout_marginTop="25dp"
            android:layout_height="45dp"
            android:layout_width="match_parent"
            >

            <ImageView
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/button"
                android:scaleType="fitXY"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <EditText
            android:id="@+id/edt_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/dark_gray"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:hint="@string/otp"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/dark_gray"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:paddingRight="30dp"
                android:hint="@string/hint_password"
                />

            <ImageView
                android:id="@+id/iv_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/eye"
                android:padding="10dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/dark_gray"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:paddingRight="30dp"
                android:hint="@string/confirm_password"
                />

            <ImageView
                android:id="@+id/iv_eye_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/eye"
                android:padding="10dp"
                />

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rl_save"
            android:layout_marginTop="25dp"
            android:layout_height="45dp"
            android:layout_width="match_parent"
            >

            <ImageView
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/button"
                android:scaleType="fitXY"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>